--- a/XiLag-quad.ipynb
+++ b/XiLag-quad.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
@@ -13,15 +11,14 @@
     "import numpy as np\n",
     "from scipy import special\n",
     "from scipy.integrate import quad\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = np.loadtxt('ACH.dat')"
@@ -29,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Lbox = 1100\n",
@@ -54,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample = np.random.choice(len(data),size=Nt,replace=False)"
@@ -65,10 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x, y, z = data[sample].T"
@@ -76,16 +67,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def E1(s):\n",
+    "    return special.erf(s/sqrt(2))\n",
+    "\n",
+    "def E2(s):\n",
+    "    return sqrt(2/pi)*np.exp(-s**2/2)\n",
+    "\n",
+    "def mu1(s):\n",
+    "    return (s+1/s) * E1(s) + E2(s)\n",
+    "\n",
+    "def mu2(s):\n",
+    "    return 3 + s**2\n",
+    "\n",
+    "def mu3(s):\n",
+    "    return (s**3+6*s+3/s) * E1(s) + (s**2+5) * E2(s)\n",
+    "\n",
+    "def mu4(s):\n",
+    "    return s**4+10*s**2+15\n",
+    "\n",
+    "def mu5(s):\n",
+    "    return (s**5+15*s**3+45*s+15/s) * E1(s) + (s**2+3)*(s**2+11) * E2(s)\n",
+    "\n",
+    "def mu6(s):\n",
+    "    return s**6 + 21*s**4 + 105*s**2 + 105\n",
+    "\n",
+    "def mu7(s):\n",
+    "    return (s**7+28*s**5+210*s**3+420*s+105/s)* E1(s) + (s**6+27*s**4+185*s**2+279)*E2(s)\n",
+    "\n",
+    "def mu8(s):\n",
+    "    return s**8 + 36*s**6 + 378*s**4 + 1260*s**2 + 945\n",
+    "\n",
+    "def mu9(s):\n",
+    "    return (s**9+45*s**7+630*s**5+3150*s**3+4725*s+945/s)*E1(s) + (s**8+44*s**6+588*s**4+2640*s**2+2895)*sqrt(2/pi)*E2(s)\n",
+    "    \n",
+    "#def f1(s):\n",
+    "#    return ((s/sigma)+1/((s/sigma))) * special.erf((s/sigma)/sqrt(2)) + sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
+    "\n",
+    "#def f2(s):\n",
+    "#    return 3 + (s/sigma)**2\n",
+    "\n",
+    "#def f3(s):\n",
+    "#    return ((s/sigma)**3+6*(s/sigma)+3/(s/sigma)) * special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**2+5) * sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
+    "\n",
+    "#def f4(s):\n",
+    "#    return (s/sigma)**4+10*(s/sigma)**2+15\n",
+    "\n",
+    "#def f5(s):\n",
+    "#    return ((s/sigma)**5+15*(s/sigma)**3+45*(s/sigma)+15/(s/sigma)) * special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**2+5) + ((s/sigma)**2+3)*((s/sigma)**2+11) * sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
+    "\n",
+    "#def f6(s):\n",
+    "#    return (s/sigma)**6 + 21*(s/sigma)**4 + 105*(s/sigma)**2 + 105\n",
+    "\n",
+    "#def f7(s):\n",
+    "#    return ((s/sigma)**7+28*(s/sigma)**5+210*s**3+420*(s/sigma)+105/(s/sigma))* special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**6+27*(s/sigma)**4+185*(s/sigma)**2+279)*sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
+    "\n",
+    "#def f8(s):\n",
+    "#    return (s/sigma)**8 + 36*(s/sigma)**6 + 378*(s/sigma)**4 + 1260*(s/sigma)**2 + 945\n",
+    "\n",
+    "#def f9(s):\n",
+    "#    return ((s/sigma)**9+45*(s/sigma)**7+630*(s/sigma)**5+3150*(s/sigma)**3+4725*(s/sigma)+945/(s/sigma))*special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**8+44*(s/sigma)**6+588*(s/sigma)**4+2640*(s/sigma)**2+2895)*sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = [mu1,mu2,mu3,mu4,mu5,mu6,mu7,mu8,mu9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 109999/109999 [05:39<00:00, 323.79it/s] "
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time = 581.1197168827057\n"
+      "Time = 339.7347140312195\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -94,7 +173,7 @@
     "\n",
     "Nb = np.zeros(nr)\n",
     "\n",
-    "for i in range(0,Nt-1):\n",
+    "for i in tqdm(range(Nt-1)):\n",
     "    j = np.arange(i+1,Nt)\n",
     "    \n",
     "    dx = x[i] - x[j]\n",
@@ -116,17 +195,19 @@
     "    r = r[(r>=rmin) & (r<=rmax)]\n",
     "    if len(r) > 0:\n",
     "        s = r/sigma\n",
-    "        E1 = special.erf(s/sqrt(2))\n",
-    "        E2 = sqrt(2/pi)*np.exp(-s**2/2)\n",
-    "        fbasis[0] += sum((s+1/s) * E1 + E2)/Nt\n",
-    "        fbasis[1] += sum(3 + s**2)/Nt\n",
-    "        fbasis[2] += sum((s**3+6*s+3/s) * E1 + (s**2+5) * E2)/Nt\n",
-    "        fbasis[3] += sum(s**4+10*s**2+15)/Nt\n",
-    "        fbasis[4] += sum((s**5+15*s**3+45*s+15/s) * E1 + (s**2+3)*(s**2+11) * E2)/Nt\n",
-    "        fbasis[5] += sum(s**6 + 21*s**4 + 105*s**2 + 105)/Nt\n",
-    "        fbasis[6] += sum((s**7+28*s**5+210*s**3+420*s+105/s)*E1 + (s**6+27*s**4+185*s**2+279)*E2)/Nt\n",
-    "        fbasis[7] += sum(s**8 + 36*s**6 + 378*s**4 + 1260*s**2 + 945)/Nt\n",
-    "        fbasis[8] += sum((s**9+45*s**7+630*s**5+3150*s**3+4725*s+945/s)*E1 + (s**8+44*s**6+588*s**4+2640*s**2+2895)*E2)/Nt\n",
+    "        for k,f in enumerate(mu):\n",
+    "            fbasis[k] += np.sum(f(s))\n",
+    "        #E1 = special.erf(s/sqrt(2))\n",
+    "        #E2 = sqrt(2/pi)*np.exp(-s**2/2)\n",
+    "        #fbasis[0] += sum((s+1/s) * E1 + E2)/Nt\n",
+    "        #fbasis[1] += sum(3 + s**2)/Nt\n",
+    "        #fbasis[2] += sum((s**3+6*s+3/s) * E1 + (s**2+5) * E2)/Nt\n",
+    "        #fbasis[3] += sum(s**4+10*s**2+15)/Nt\n",
+    "        #fbasis[4] += sum((s**5+15*s**3+45*s+15/s) * E1 + (s**2+3)*(s**2+11) * E2)/Nt\n",
+    "        #fbasis[5] += sum(s**6 + 21*s**4 + 105*s**2 + 105)/Nt\n",
+    "        #fbasis[6] += sum((s**7+28*s**5+210*s**3+420*s+105/s)*E1 + (s**6+27*s**4+185*s**2+279)*E2)/Nt\n",
+    "        #fbasis[7] += sum(s**8 + 36*s**6 + 378*s**4 + 1260*s**2 + 945)/Nt\n",
+    "        #fbasis[8] += sum((s**9+45*s**7+630*s**5+3150*s**3+4725*s+945/s)*E1 + (s**8+44*s**6+588*s**4+2640*s**2+2895)*E2)/Nt\n",
     "    \n",
     "        \n",
     "fbasis = fbasis*2 / (Nt-1)\n",
@@ -138,63 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def f1(s):\n",
-    "    return ((s/sigma)+1/((s/sigma))) * special.erf((s/sigma)/sqrt(2)) + sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
-    "\n",
-    "def f2(s):\n",
-    "    return 3 + (s/sigma)**2\n",
-    "\n",
-    "def f3(s):\n",
-    "    return ((s/sigma)**3+6*(s/sigma)+3/(s/sigma)) * special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**2+5) * sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
-    "\n",
-    "def f4(s):\n",
-    "    return (s/sigma)**4+10*(s/sigma)**2+15\n",
-    "\n",
-    "def f5(s):\n",
-    "    return ((s/sigma)**5+15*(s/sigma)**3+45*(s/sigma)+15/(s/sigma)) * special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**2+5) + ((s/sigma)**2+3)*((s/sigma)**2+11) * sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
-    "\n",
-    "def f6(s):\n",
-    "    return (s/sigma)**6 + 21*(s/sigma)**4 + 105*(s/sigma)**2 + 105\n",
-    "\n",
-    "def f7(s):\n",
-    "    return ((s/sigma)**7+28*(s/sigma)**5+210*s**3+420*(s/sigma)+105/(s/sigma))* special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**6+27*(s/sigma)**4+185*(s/sigma)**2+279)*sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
-    "\n",
-    "def f8(s):\n",
-    "    return (s/sigma)**8 + 36*(s/sigma)**6 + 378*(s/sigma)**4 + 1260*(s/sigma)**2 + 945\n",
-    "\n",
-    "def f9(s):\n",
-    "    return ((s/sigma)**9+45*(s/sigma)**7+630*(s/sigma)**5+3150*(s/sigma)**3+4725*(s/sigma)+945/(s/sigma))*special.erf((s/sigma)/sqrt(2)) + ((s/sigma)**8+44*(s/sigma)**6+588*(s/sigma)**4+2640*(s/sigma)**2+2895)*sqrt(2/pi)*np.exp(-(s/sigma)**2/2)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "f = [f1,f2,f3,f4,f5,f6,f7,f8,f9]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "V = np.zeros(nk)\n",
     "for k in range(nk):\n",
-    "    fun = lambda s: s**2 * f[k](s)\n",
+    "    fun = lambda r: r**2 * mu[k](r/sigma)\n",
+    "    #func = lambda s: s**2 * f[k](s) \n",
     "    V[k] = quad(fun,rmin, rmax)[0]\n",
     "    \n",
     "    \n",
@@ -203,27 +235,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dim = (nk, nk)\n",
     "FRR = np.zeros(dim)\n",
     "for k in range(nk):\n",
     "    for l in range(k,nk):\n",
-    "        func = lambda s: s**2 * f[k](s) * f[l](s)\n",
+    "        func = lambda r: r**2 * mu[k](r/sigma) * mu[l](r/sigma)\n",
+    "        #func = lambda s: s**2 * f[k](s) * f[l](s)\n",
     "        FRR[k,l] = (4*pi/Lbox**3)*quad(func, rmin, rmax)[0]\n",
     "        FRR[l,k] = FRR[k,l]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "invF = np.linalg.inv(FRR)"
@@ -231,10 +260,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.17809403e+04, 2.55092334e+05, 5.66733533e+06, 1.28658974e+08,\n",
+       "       2.97411512e+09, 6.98029296e+10, 1.65946557e+12, 3.98862904e+13,\n",
+       "       9.67786112e+14])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuDD = fbasis\n",
+    "nuDD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.99839113e-02, 2.16539251e+00, 4.81168675e+01, 1.09252200e+03,\n",
+       "       2.52588557e+04, 5.92912484e+05, 1.40975040e+07, 3.38884042e+08,\n",
+       "       8.22362166e+09])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuRR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([117828.35964068, 117804.2003647 , 117782.71579334, 117763.28069678,\n",
+       "       117745.4415564 , 117728.89160855, 117713.43172816, 117698.93373085,\n",
+       "       117683.68627869])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuDD/nuRR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sim: [-1.02486758e+13  4.38484179e+12 -8.11528563e+11  8.48865278e+10\n",
+      " -5.49058962e+09  2.24951684e+08 -5.70289614e+06  8.18210358e+04\n",
+      " -5.08812327e+02]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nuDD = fbasis\n",
+    "simDiff = nuDD - nuRR\n",
+    "aSim = np.dot(invF, simDiff)\n",
+    "print ('Sim:', aSim)\n",
+    "checkDiff = 0*simDiff\n",
+    "for k in range(0,nk):\n",
+    "    checkDiff[k] = sum(FRR[k,:]*aSim[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 142,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -259,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rt = np.arange(60,121)\n",
@@ -283,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -331,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
